feat: Add Railway-compatible startup script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "start": "node mock-user-service.js & node mock-application-service.js & node mock-evaluation-service.js & node mock-notification-service.js & node mock-dashboard-service.js & node mock-guardian-service.js & wait",
+    "start": "node start-railway.js",
+    "start:local": "node mock-user-service.js & node mock-application-service.js & node mock-evaluation-service.js & node mock-notification-service.js & node mock-dashboard-service.js & node mock-guardian-service.js & wait",
     "test": "bash integration-tests.sh",
     "test:integration": "bash integration-tests.sh",
     "test:smoke": "curl -f http://localhost:8082/health && curl -f http://localhost:8083/health && curl -f http://localhost:8084/health && curl -f http://localhost:8085/health && curl -f http://localhost:8086/health && curl -f http://localhost:8087/health",
